fix layout issue for icons

--- a/src/app/components/profile-card/profile-card.component.scss
+++ b/src/app/components/profile-card/profile-card.component.scss
@@ -64,12 +64,13 @@
         padding: 1.5rem;
 
         @media only screen and (max-width:1200px){
-            padding: 2rem 1rem 0 1rem;
+            padding: 2rem 1rem;
         }
     }
 
     &__ideas {
         margin-bottom: 1.5rem;
+        display: flex;
     }
 
     &__icons {
